<resources>
    <string name="app_name">مُوَلِّدُ آيَاتٍ عَشْوَائِيّ</string>
    <string name="right_navigation_icon_content_description">This icon opens the right navigation drawer</string>
    <string name="choose_generation_method">اِبْدَأْ تَوْلِيدَ آيَاتٍ عَشْوَائِيَّةٍ بِالضَّغْطِ عَلَى الزِّرِّ</string>
    <string name="random_generation_button">تَوْلِيدٌ عَشْوَائِيٌِّ</string>
    <string name="no_ayah_found">لَا تُوجَدُ أَيُّ آيَةٍ فِي قَاعِدَةِ الْبَيَانَاتِ ، ابْدَأْ بِإِضَافَةِ آيَتَيْنِ عَلَى الْأَقَلِّ فِي قَاعِدَةِ الْبَيَانَاتِ.</string>
    <string name="add_ayah_button">إِضَافَةُ آيَةٍ</string>
    <string name="side_panel_header_text">اللَّوْحَةُ الْجَانِبِيَّةُ</string>
    <string name="modal_title">أَضِفْ آيَةً</string>
    <string name="modal_add_button">أَضِفْ</string>
    <string name="surah_dropdown_hint">اِخْتَرْ سُورَةً</string>
    <string name="ayah_dropdown_hint">اِخْتَرْ آيَةً</string>
    <string name="close_modal_icon_description">Close modal</string>
    <string name="repeat">أَعِدْ</string>
    <string name="ayah_prefix">رَقْمُ الْآيَةِ</string>
    <string name="view_data">الِاطِّلَاعُ عَلَى الْبَيَانَاتِ</string>
    <string name="save_data">حِفْظُ الْبَيَانَاتِ</string>
    <string name="load_data">تَحْمِيلُ الْبَيَانَاتِ</string>
    <string name="delete_data">حَذْفُ الْبَيَانَاتِ</string>
    <string name="dashboard">لوحَةُ الْمَعَارِضِ</string>
    <string name="settings">الإِعْدَادَاتُ</string>
    <string name="displaying_data">عَرْضُ الْبَيَانَاتِ</string>
    <string name="no_data_in_database">لَا تُوجَدُ أَيُّ آيَةٍ فِي قَاعِدَةِ الْبَيَانَاتِ.</string>
    <string name="ayah_stats">إِحْصَائِيَّاتُ الْآيَةِ</string>
    <string name="surah_stats">إِحْصَائِيَّاتُ السُّورَةِ</string>
    <string name="total_count">عَدَدُ إِجْمَالِيِّ التَّشْغِيلِ</string>
    <string name="play_prefix">مَرَّة</string>
    <string name="add_all_ayahs_in_surah">أَضِفِ السُّورَةَ كَامِلَةً</string>
    <string name="surah_prefix">سُورَةٌ</string>
    <string name="play_count">عَدَدُ التَّشْغِيلِ</string>
    <string name="light_dark_modes_icon_toggle">Switch the app theme to dark or light mode by clicking on this icon</string>
</resources>