<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/dialogBackgroundColor"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/closeAddAyahModalIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/close_modal_icon_description"
            app:srcCompat="@drawable/close_modal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/modal_title"
            android:textColor="?attr/textPrimaryColor"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surahLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp">

        <AutoCompleteTextView
            android:id="@+id/surahDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="300dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/surah_dropdown_hint"
            android:inputType="none"
            android:popupBackground="@drawable/custom_dropdown_background"
            android:textColor="?attr/textPrimaryColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ayahLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <AutoCompleteTextView
            android:id="@+id/ayahDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="300dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/ayah_dropdown_hint"
            android:inputType="none"
            android:popupBackground="@drawable/custom_dropdown_background"
            android:textColor="?attr/textPrimaryColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ayahPreviewTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/addAyahButtonModal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:width="250dp"
        android:height="80dp"
        android:text="@string/modal_add_button"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>