<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/bottom_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:text="@string/side_panel_header_text"
            android:textColor="?attr/textPrimaryColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/viewDataAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/view_data"
                android:textColor="?attr/textPrimaryColor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/view_data_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/saveDataAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/save_data"
                android:textColor="?attr/textPrimaryColor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/save_data_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loadDataAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/load_data"
                android:textColor="?attr/textPrimaryColor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/load_data_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteDataAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/delete_data"
                android:textColor="?attr/textPrimaryColor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/delete_data_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dashboardAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/dashboard"
                android:textColor="?attr/textPrimaryColor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/dashboard_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/clickable_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/settings"
                android:textColor="?attr/textPrimaryColor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/settings_icon" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>